<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout1" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_login_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

        </com.google.android.material.appbar.MaterialToolbar>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_edit_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp"
            style="@style/EditTextTheme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/textSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/password_empty_register_fragment"
            android:layout_marginTop="4dp"
            style="@style/EditTextTheme"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_register_fragment"
            app:backgroundTint="@null"
            android:layout_marginTop="16dp"
            android:id="@+id/buttonRegister"
            style="@style/ButtonTheme"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible"
            />

    </LinearLayout>
    </LinearLayout>
</ScrollView>